--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.8.9",
     "@types/papaparse": "^5.3.10",
     "ts-node": "^10.9.1",
@@ -12,12 +13,18 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.1.0",
+    "@types/express": "^4.17.20",
+    "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
+    "multer": "^1.4.5-lts.1",
     "papaparse": "^5.4.1"
   },
   "scripts": {
-    "parse": "node src/js/main.js",
+    "parse": "node src/main.js",
     "parse:ts": "yarn ts-node src/ts/main.ts",
-    "start": "nodemon src/server.ts"
+    "start:ts": "ts-node src/ts/server.ts",
+    "start": "node src/server.js",
+    "build": "tsc",
+    "serve": "node dist/index.js"
   }
 }
